# font-manager

./: README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docs/: implementation-path.md  implementation-plan.md
src/: App.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/scripts/: clean-bundle.cjs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/fonts/: enumerate.rs  install.rs  mod.rs  preview.rs  uninstall.rs
src-tauri/src/win/: registry.rs
src/components/: FontFamilyCard.tsx  InstallArea.tsx  PreviewPane.tsx  ThemeToggle.tsx  TitleBar.tsx
src/components/ui/: accordion.tsx  use-toast.ts
src/lib/: font-names.ts  font-preview.ts  tauri.ts
src/styles/: globals.css
src/types/: fonts.ts
