[package]
name = "font-manager"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "font_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fontdb = "0.16"
winapi = { version = "0.3", features = ["winuser", "wingdi", "winreg", "shlobj", "knownfolders", "objbase", "winerror"] }
walkdir = "2"
sha1 = "0.10"
hex = "0.4"
winreg = "0.52"
tauri-plugin-dialog = "2"
ttf-parser = "0.25.1"
base64 = "0.22"
sha2 = "0.10.9"
